--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     This is a sample text
     <p>This is a paragraph</p>
     I added a text here
-    
+    the quick brown fox jump over the lazy dog
 </body>
 </html>
