--- a/index.html
+++ b/index.html
@@ -7,14 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
-    <h1>Title4</h1>
-=======
-    <h1>Title2</h1>
->>>>>>> indexUpdateAgain
-    This is a sample text
-    <p>This is a paragraph</p>
-    I added a text here
-    the quick brown fox jump over the lazy dog
+    <h1>Hello World</h1>
 </body>
 </html>
